Add footer with creator's name to index.html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
     <button onclick="searchWord()">Search</button>
     <div id="output"></div>
   </div>
-
+<div>
+  <h3>MADE BY ISHITA</h3>
+</div>
 <script>
 async function searchWord() {
   const word = document.getElementById('wordInput').value.trim();
