--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <input type="text" id="wordInput" placeholder="Type a word...">
     <button onclick="searchWord()">Search</button>
     <div id="output"></div>
-  </div>
+  </div><BR><BR>
 <div>
   <h3>MADE BY ISHITA</h3>
 </div>
