Fix line break in footer heading

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div id="output"></div>
   </div><BR><BR>
 <div>
-  <h3>MADE BY ISHITA</h3>
+  <h3><br></BR>MADE BY ISHITA</h3>
 </div>
 <script>
 async function searchWord() {
